--- a/index.html
+++ b/index.html
@@ -96,17 +96,21 @@
 </section>
 
 <!-- Statistik/About -->
-<section class="container about-section" id="about">
-  <div class="about-title">Tentang SleepWell AI</div>
-  <div class="about-desc">
-    SleepWell AI dikembangkan oleh tim multidisiplin di bidang kesehatan, data, dan teknologi.<br>
-    Visi kami: menghadirkan kualitas tidur optimal, edukasi kesehatan, dan kebiasaan sehat untuk masyarakat Indonesia.
-  </div>
-  <div class="stats-row">
-    <div class="stat-card"><h3>13.000+</h3><p>Data tidur diproses</p></div>
-    <div class="stat-card"><h3>4.9/5</h3><p>Rating pengguna</p></div>
-    <div class="stat-card"><h3>#1</h3><p>Aplikasi prediksi tidur di Indonesia</p></div>
-    <div class="stat-card"><h3>100%</h3><p>Data terenkripsi</p></div>
+<section class="about-section" id="about">
+  <div class="container">
+    <div class="about-card">
+      <h2 class="about-title">Tentang SleepWell AI</h2>
+      <p class="about-desc">
+        SleepWell AI dikembangkan oleh tim multidisiplin di bidang kesehatan, data, dan teknologi.<br>
+        Visi kami: menghadirkan kualitas tidur optimal, edukasi kesehatan, dan kebiasaan sehat untuk masyarakat Indonesia.
+      </p>
+      <div class="stats-row">
+        <div class="stat-card"><h3>13.000+</h3><p>Data tidur diproses</p></div>
+        <div class="stat-card"><h3>4.9/5</h3><p>Rating pengguna</p></div>
+        <div class="stat-card"><h3>#1</h3><p>Aplikasi prediksi tidur di Indonesia</p></div>
+        <div class="stat-card"><h3>100%</h3><p>Data terenkripsi</p></div>
+      </div>
+    </div>
   </div>
 </section>
 
