--- a/form-input.html
+++ b/form-input.html
@@ -8,7 +8,7 @@
 <body>
   <div class="input-container">
     <div class="input-card">
-      <img src="img/logo-sinyal-tenang.png" alt="SleepWell Logo" class="logo">
+      <img src="style/img/logo-sinyal-tenang.png" alt="SleepWell Logo" class="logo">
       <h2 class="title">Input Data Tidur Harian</h2>
       <div id="userProfile"></div>
       <form id="sleepForm" autocomplete="off">
