--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ setInterval(()=>{testiIdx=(testiIdx+1)%testimonials.length;updateTesti(testiIdx)
 <!-- Footer -->
 <footer id="contact">
   <div class="footer-row">
-    <img src="img/logo-sinyal-tenang.png" class="footer-logo" alt="Logo SleepWell"/>
+    <img src="style/img/logo-sinyal-tenang.png" class="footer-logo" alt="Logo SleepWell"/>
     <span class="navbar-logo" style="font-size:1.11rem">SleepWell <span style="color:var(--blue)">AI</span></span>
     <a href="mailto:support@sleepwellai.id" class="footer-link">support@sleepwellai.id</a>
     <a href="#" class="footer-link">Kebijakan Privasi</a>
