--- a/cbti/cbt-apnea-akut.html
+++ b/cbti/cbt-apnea-akut.html
@@ -22,3 +22,117 @@
   <button onclick="window.history.back()">Kembali</button>
 </body>
 </html>
+
+/* 1. Reset & Font */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: 'Inter', sans-serif;
+  background-color: #F8FAFF;   /* Latar utama yang lembut */
+  color: #333;
+  line-height: 1.6;
+}
+
+/* 2. Section Hero */
+.hero {
+  padding: 4rem 1rem;
+}
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  background: #FFF;
+  border-radius: 1rem;
+  padding: 2.5rem;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.05);
+}
+
+/* 3. Judul & Paragraf */
+.container h2 {
+  font-size: 2rem;
+  color: #7C5DD3;             /* Ungu khas SleepWell */
+  margin-bottom: 1rem;
+}
+.container p {
+  font-size: 1rem;
+  color: #4A4A4A;
+  margin-bottom: 1.5rem;
+}
+
+/* 4. Daftar Tips */
+.tips-list {
+  list-style: none;
+  margin-bottom: 2rem;
+}
+.tips-list li {
+  position: relative;
+  padding-left: 1.5rem;
+  margin-bottom: 0.75rem;
+  font-size: 1rem;
+  color: #4A4A4A;
+}
+.tips-list li::before {
+  content: "✔";
+  position: absolute;
+  left: 0;
+  top: 0;
+  color: #22C55E;            /* Hijau centang */
+  font-weight: bold;
+}
+
+/* 5. Referensi */
+.refs {
+  list-style: none;
+  margin-bottom: 2rem;
+}
+.refs li a {
+  color: #7C5DD3;
+  text-decoration: none;
+  font-weight: 500;
+}
+.refs li a:hover {
+  text-decoration: underline;
+}
+
+/* 6. Tombol */
+.btn {
+  display: inline-block;
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 0.75rem 1.75rem;
+  border-radius: 999px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+.btn-primary {
+  background-color: #7C5DD3;
+  color: #FFF;
+  border: none;
+}
+.btn-primary:hover {
+  background-color: #6B4BC1;
+}
+.btn-secondary {
+  background: transparent;
+  color: #7C5DD3;
+  border: 2px solid #7C5DD3;
+}
+.btn-secondary:hover {
+  background-color: rgba(124,93,211,0.1);
+}
+
+/* 7. Responsive */
+@media (min-width: 768px) {
+  .container {
+    padding: 3rem;
+  }
+  .container h2 {
+    font-size: 2.5rem;
+  }
+  .container p {
+    font-size: 1.125rem;
+  }
+}
+
